# third_lab

./: CMakeLists.txt  loadTestDictionary.cpp  loadTestSet.cpp  main.cpp  testDictionary.cpp  testHistogram.cpp  testSet.cpp  unitTestDictionary.cpp  unitTestHistogram.cpp  unitTestSet.cpp
include/collection/: AVLTree.h  Dictionary.h  IDictionary.h  ISequence.h  ISet.h  Sequence.h  Set.h  Vector.h
include/concept/: Concept.h
include/generator/: Generator.h
include/gui/: GenerateDialog.h  HistogramWidget.h  IntervalsDialog.h  MainWindow.h  OpenDialog.h
include/sorter/: ISorter.h  QuickSorter.h
include/test/: LoadTest.h  Test.h
include/type/: Person.h  Point.h
src/generator/: Generator.cpp
src/gui/: GenerateDialog.cpp  HistogramWidget.cpp  IntervalsDialog.cpp  MainWindow.cpp  OpenDialog.cpp
src/test/: LoadTest.cpp  Test.cpp  UnitTest.cpp
